# chatGPT5

./: .dockerignore  .env.example  .export_cache.json  .gitignore  .prompt_metrics.json  CHANGELOG.md  CI_TEST_RESULTS.md  README.md  README_v1_atomic.md  dast_summary.md  export_to_sheet.py  export_to_sheet_v1_atomic.py  install_v1.sh  report_html.html  report_json.json  report_md.md  requirements.txt  requirements_v1.txt
src/versions/IMSD01/backend/: alembic.ini  package-lock.json  pyproject.toml
src/versions/IMSD01/backend/migrations/: env.py
src/versions/IMSD01/backend/src/: app.js
src/versions/IMSD01/backend/src/api/: app.py  errors.py  router.py
src/versions/IMSD01/backend/src/config/: settings.py
src/versions/IMSD01/backend/src/db/: session.py
src/versions/IMSD01/backend/src/middleware/: errorHandler.js
src/versions/IMSD01/backend/src/models/: alert.py  inventory_log.py  order.py  product.py
src/versions/IMSD01/backend/src/services/: alert_service.py  inventory_service.py
src/versions/IMSD01/backend/src/utils/: apiResponse.js
src/versions/IMSD01/backend/tests/: conftest.py  inventory.test.js  test_inventory_scenarios.py
src/versions/IMSD01/backend/tests/contract/: test_inventory_cancel.py  test_inventory_purchase.py
src/versions/IMSD01/backend/tests/integration/: test_low_stock_alert.py  test_purchase_atomicity.py  test_purchase_concurrency.py  test_restore_stock.py
src/versions/IMSD01/backend/tests/unit/: test_inventory_service_purchase.py  test_inventory_service_restore.py  test_low_stock_threshold.py  test_purchase_boundary.py
(+796 files in other folders)
