[project]
name = "inventory-management"
version = "0.1.0"
description = "Inventory management service"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "pydantic>=2.5",
  "alembic>=1.12",
]

[project.optional-dependencies]

test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.24",
]

[tool.pytest.ini_options]
addopts = "-vv -rA"
testpaths = ["tests"]
markers = [
  "scenarios: scenario coverage mapped from scenarios_inventory.md",
]

[tool.ruff]
line-length = 100
